# i2c_eeprom_util

./: LICENSE.md  README.md  i2c.py  pyproject.toml  requirements.txt
src/i2c_eeprom_util/: __init__.py  i2c_eeprom_util.py
